add_library(${PROJECT_NAME} INTERFACE)
target_include_directories(${PROJECT_NAME} INTERFACE inc)
target_compile_features(${PROJECT_NAME} INTERFACE cxx_std_20)
target_link_libraries(${PROJECT_NAME} INTERFACE cpp-tag-invoke)
#target_compile_options(${PROJECT_NAME} PUBLIC -fconcepts-diagnostics-depth=5)
